Document schema validation short options and make --validate imply --wconsole on Windows

--- a/doc/man/wesnoth.6
+++ b/doc/man/wesnoth.6
@@ -369,9 +369,9 @@ makes the
 .B package
 package available to lua scripts, so that they can load arbitrary packages. Do not do this with untrusted scripts! This action gives lua the same permissions as the wesnoth executable.
 .TP
-.BI --use-schema  \ path
+.BI -S,--use-schema  \ path
 sets the WML schema for use with
-.BR --validate .
+.BR -V,--validate .
 .TP
 .BI --userconfig-dir \ name
 sets the user configuration directory to
