--- a/doc/man/wesnoth.6
+++ b/doc/man/wesnoth.6
@@ -81,11 +81,11 @@ Adds the option to show a clock for testing the drawing timer.
 .TP
 .BI --config-dir \ name
 Deprecated, use
-.BR --userconfig-dir .
+.BR --userdata-dir .
 .TP
 .B --config-path
 Deprecated, use
-.BR --userconfig-path .
+.BR --userdata-path .
 .TP
 .BI --core \ id_core
 overrides the loaded core with the one whose id is specified.
