German Translation: fix documentation

--- a/po/wesnoth-manpages/de.po
+++ b/po/wesnoth-manpages/de.po
@@ -1,19 +1,20 @@
 # Translators:
-#  Nils Kneuper <crazy-ivanovic@gmx.net>, 2006 - 2010
-#  Rhonda D'Vine <rhonda@deb.at>, 2008 - 2011, 2018
+#  Nils Kneuper <crazy-ivanovic@gmx.net>, 2006 - 2010.
+#  Rhonda D'Vine <rhonda@deb.at>, 2008 - 2011, 2018.
+# Severin Glöckner <severin.gloeckner@stud.htwk-leipzig.de>, 2018.
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
 "POT-Creation-Date: 2018-09-09 11:38+0300\n"
-"PO-Revision-Date: 2018-09-11 12:46+0200\n"
-"Last-Translator: Rhonda D'Vine <rhonda@deb.at>\n"
-"Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
+"PO-Revision-Date: 2018-12-12 23:09+0100\n"
+"Last-Translator: Severin Glöckner <severin.gloeckner@stud.htwk-leipzig.de>\n"
+"Language-Team: German <irc://irc.freenode.net/#wesnoth-de>\n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.7\n"
+"X-Generator: Lokalize 2.0\n"
 
 # type: TH
 #. type: TH
@@ -244,9 +245,7 @@ msgstr "B<--data-path>"
 #. type: Plain text
 #: doc/man/wesnoth.6:82
 msgid "prints the path of the data directory and exits."
-msgstr ""
-"Zeigt an, wo sich das Verzeichnis für die Nutzerdaten (Spielstände, Add-"
-"ons, ...) befindet."
+msgstr "Zeigt an, wo sich das Verzeichnis mit den Spieldateien befindet."
 
 # type: TP
 #. type: TP
@@ -652,7 +651,8 @@ msgstr "Zeigt an, wo sich das Verzeichnis mit den Spieldateien befindet."
 #: doc/man/wesnoth.6:214
 #, no-wrap
 msgid "B<-p,\\ --preprocess>I<\\ source-file/folder>B<\\ >I<target-directory>"
-msgstr "B<-p,\\ --preprocess>I<\\ Quelldatei/Verzeichnis>B<\\ >I<Zielverzeichnis>"
+msgstr ""
+"B<-p,\\ --preprocess>I<\\ Quelldatei/Verzeichnis>B<\\ >I<Zielverzeichnis>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:224
@@ -991,7 +991,9 @@ msgstr "B<--userdata-path>"
 #. type: Plain text
 #: doc/man/wesnoth.6:334
 msgid "prints the path of the userdata directory and exits."
-msgstr "Zeigt an, wo sich das Verzeichnis für die Nutzerdaten befindet."
+msgstr ""
+"Zeigt an, wo sich das Verzeichnis für die Nutzerdaten (Spielstände, Add-"
+"ons, …) befindet."
 
 # type: TP
 #. type: TP
