wesnoth_editor's manpage doesn't exist anymore move the forgotten reference from the other manpages
(done with sed)

--- a/doc/man/cs/wesnoth.6
+++ b/doc/man/cs/wesnoth.6
@@ -225,4 +225,4 @@ to i co se týká obchodovatelnosti a použitelnosti.
 .
 .SH "VIZ TAKÉ"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
