--- a/doc/man/de/wesnoth.6
+++ b/doc/man/de/wesnoth.6
@@ -242,4 +242,4 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110\-1301, USA.
 .
 .SH ANDERE
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
