--- a/doc/man/ja/wesnoth.6
+++ b/doc/man/ja/wesnoth.6
@@ -197,4 +197,4 @@ for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .
 .SH 関連項目
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
