--- a/doc/man/lt/wesnoth.6
+++ b/doc/man/lt/wesnoth.6
@@ -226,4 +226,4 @@ garantijos; netgi PERKAMUMO ar TINKAMUMO KONKRETIEMS TIKSLAMS.
 .
 .SH "TAIP PAT ŽIŪRĖKITE"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
