--- a/doc/man/sr/wesnoth.6
+++ b/doc/man/sr/wesnoth.6
@@ -220,4 +220,4 @@ wesnoth \-\- "Бој за Веснот", фантазијска стратеги
 .
 .SH "ПОГЛЕДАТИ ЈОШ"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
