--- a/doc/man/sr@ijekavian/wesnothd.6
+++ b/doc/man/sr@ijekavian/wesnothd.6
@@ -293,4 +293,4 @@ UNSIGNED NOT NULL DEFAULT 0, user_is_moderator TINYINT(4) NOT NULL DEFAULT
 .
 .SH "ПОГЛЕДАТИ ЈОШ"
 .
-\fBwesnoth\fP(6), \fBwesnoth_editor\fP(6)
+\fBwesnoth\fP(6)
