--- a/doc/man/sr@ijekavianlatin/wesnoth.6
+++ b/doc/man/sr@ijekavianlatin/wesnoth.6
@@ -221,4 +221,4 @@ za KOMERCIJALNU VRIJEDNOST ili ISPUNJAVANJE ODREĐENE POTREBE.
 .
 .SH "POGLEDATI JOŠ"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
