remove reference to removed manpage
commands used:
find -name wesnoth*.6 -exec sed -i 's/\\fBwesnoth_editor\\fP(6), //' {} +
find -name wesnoth*.6 -exec sed -i 's/, \\fBwesnoth_editor\\fP(6)//' {} +
sed -i 's/\.BR wesnoth (6), /\.BR wesnoth (6)/' man/wesnoth*.6
sed -i '/\.BR wesnoth_editor (6)/d' man/wesnoth*.6

--- a/doc/man/sr/wesnoth.6
+++ b/doc/man/sr/wesnoth.6
@@ -216,4 +216,4 @@ wesnoth \-\- "Бој за Веснот", фантазијска стратеги
 .
 .SH "ПОГЛЕДАТИ ЈОШ"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
