--- a/doc/man/sv/wesnoth.6
+++ b/doc/man/sv/wesnoth.6
@@ -219,4 +219,4 @@ för SÄLJBARHET eller LÄMPLIGHET FÖR ETT VISST SYFTE.
 .
 .SH "SE ÄVEN"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
