--- a/doc/man/cs/wesnoth.6
+++ b/doc/man/cs/wesnoth.6
@@ -220,4 +220,4 @@ to i co se týká obchodovatelnosti a použitelnosti.
 .
 .SH "VIZ TAKÉ"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
