--- a/doc/man/cs/wesnothd.6
+++ b/doc/man/cs/wesnothd.6
@@ -264,4 +264,4 @@ to i co se týká obchodovatelnosti a použitelnosti.
 .
 .SH "VIZ TAKÉ"
 .
-\fBwesnoth\fP(6), \fBwesnoth_editor\fP(6)
+\fBwesnoth\fP(6)
