--- a/doc/man/en_GB/wesnoth.6
+++ b/doc/man/en_GB/wesnoth.6
@@ -216,4 +216,4 @@ for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .
 .SH "SEE ALSO"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
