--- a/doc/man/fi/wesnoth.6
+++ b/doc/man/fi/wesnoth.6
@@ -219,4 +219,4 @@ for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .
 .SH "KATSO MYÖS"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
