--- a/doc/man/sr@latin/wesnoth.6
+++ b/doc/man/sr@latin/wesnoth.6
@@ -216,4 +216,4 @@ za KOMERCIJALNU VREDNOST ili ISPUNJAVANJE ODREĐENE POTREBE.
 .
 .SH "POGLEDATI JOŠ"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
