--- a/doc/man/tr/wesnoth.6
+++ b/doc/man/tr/wesnoth.6
@@ -224,4 +224,4 @@ UYGUNLUĞU için bile garanti verilmez.
 .
 .SH "İLGİLİ BELGELER"
 .
-\fBwesnoth_editor\fP(6), \fBwesnothd\fP(6)
+\fBwesnothd\fP(6)
