--- a/doc/man/wesnothd.6
+++ b/doc/man/wesnothd.6
@@ -262,5 +262,4 @@ There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR P
 .
 .SH SEE ALSO
 .
-.BR wesnoth (6), 
-.BR wesnoth_editor (6)
+.BR wesnoth (6)
