--- a/doc/man/sr@ijekavian/wesnoth.6
+++ b/doc/man/sr@ijekavian/wesnoth.6
@@ -287,4 +287,4 @@ Copyright \(co 2003\-2013 David White <davidnwhite@verizon.net>
 .
 .SH "ПОГЛЕДАТИ ЈОШ"
 .
-\fBwesnothd\fP(6).
+\fBwesnothd\fP(6)
