--- a/doc/man/sr/wesnoth.6
+++ b/doc/man/sr/wesnoth.6
@@ -286,4 +286,4 @@ Copyright \(co 2003\-2013 David White <davidnwhite@verizon.net>
 .
 .SH "ПОГЛЕДАТИ ЈОШ"
 .
-\fBwesnothd\fP(6).
+\fBwesnothd\fP(6)
