--- a/doc/man/lt/wesnoth.6
+++ b/doc/man/lt/wesnoth.6
@@ -264,4 +264,4 @@ garantijos; netgi PERKAMUMO ar TINKAMUMO KONKRETIEMS TIKSLAMS.
 .
 .SH "TAIP PAT ŽIŪRĖKITE"
 .
-\fBwesnothd\fP(6).
+\fBwesnothd\fP(6)
