--- a/doc/man/sr/wesnothd.6
+++ b/doc/man/sr/wesnothd.6
@@ -292,4 +292,4 @@ UNSIGNED NOT NULL DEFAULT 0, user_is_moderator TINYINT(4) NOT NULL DEFAULT
 .
 .SH "ПОГЛЕДАТИ ЈОШ"
 .
-\fBwesnoth\fP(6).
+\fBwesnoth\fP(6)
