--- a/doc/man/wesnoth.6
+++ b/doc/man/wesnoth.6
@@ -294,4 +294,4 @@ There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR P
 .
 .SH SEE ALSO
 .
-.BR wesnothd (6).
+.BR wesnothd (6)
