updated Chinese (Traditional) translation

--- a/po/wesnoth-l/zh_TW.po
+++ b/po/wesnoth-l/zh_TW.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-09 08:38 UTC\n"
-"PO-Revision-Date: 2018-10-31 21:43+0800\n"
+"PO-Revision-Date: 2018-12-02 02:44+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
@@ -554,7 +554,7 @@ msgid ""
 "I am the magistrate of Dallben, and it is <i>you</i> who will be leaving "
 "Dallben, be it dead or alive."
 msgstr ""
-"我就是島本的村長，該離開島本的是<i>你</i>才對，你想活著離開還是躺著出去？"
+"我就是島本的村長，該離開島本的是<i>你</i>才對，你想活著離開還是躺著出去。"
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:210
@@ -622,7 +622,7 @@ msgid ""
 "lances. And in the dark years to come, woe betide any who questioned it."
 msgstr ""
 "他們的事蹟只會以背叛正統女王，並被她的部隊殲滅留傳下來。在黑暗的時代，質疑此"
-"事的都要倒大霉？"
+"事的都要倒大霉。"
 
 #. [scenario]: id=03_A_Strategy_of_Hope
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:4
@@ -831,7 +831,7 @@ msgid ""
 "Elensefar and return with help before the Wesnoth army destroys our homes. "
 "Retreat!"
 msgstr ""
-"我們在這裡耽擱太久了...這樣沒辦法在韋諾軍隊摧毀家園前帶回艾倫索法的援助。撤"
+"我們在這裡耽擱太久了... 這樣沒辦法在韋諾軍隊摧毀家園前帶回艾倫索法的援助。撤"
 "退！！"
 
 #. [message]: speaker=narrator
