--- a/po/wesnoth-editor/uk.po
+++ b/po/wesnoth-editor/uk.po
@@ -10,16 +10,16 @@ msgstr ""
 "Project-Id-Version: 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2012-10-31 12:38+0200\n"
-"Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2018-10-28 19:23+0200\n"
+"Last-Translator: AncientGeneral <greatgeneral12@gmail.com>\n"
+"Language-Team: \n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. [brush]: id=brush-1
 #: data/core/editor/brushes.cfg:6
@@ -43,10 +43,8 @@ msgstr "Лінія Пн.Зх.-Пд.Сх."
 
 #. [brush]: id=brush-sw-ne
 #: data/core/editor/brushes.cfg:63
-#, fuzzy
-#| msgid "Hex Line SE-NW"
 msgid "Hex Line SW-NE"
-msgstr "Лінія Пд.Сх.-Пн.Зх."
+msgstr "Лінія Пд.Зх.-Пн.Сх."
 
 #. [editor_group]: id=all
 #: data/core/editor/terrain-groups.cfg:11
@@ -131,54 +129,52 @@ msgstr ""
 #. [editor_times]: id=test
 #: data/core/editor/time-of-day.cfg:10
 msgid "Test"
-msgstr ""
+msgstr "Тест"
 
 #. [editor_times]: id=default
 #: data/core/editor/time-of-day.cfg:21
 msgid "Default"
-msgstr ""
+msgstr "Типово"
 
 #. [editor_times]: id=summer
 #: data/core/editor/time-of-day.cfg:27
 msgid "Summer"
-msgstr ""
+msgstr "Літо"
 
 #. [editor_times]: id=winter
 #: data/core/editor/time-of-day.cfg:33
 msgid "Winter"
-msgstr ""
+msgstr "Зима"
 
 #. [editor_times]: id=underground
 #: data/core/editor/time-of-day.cfg:39
 msgid "Underground"
-msgstr ""
+msgstr "Підземелля"
 
 #. [editor_times]: id=deep_underground
 #: data/core/editor/time-of-day.cfg:45
 msgid "Deep Underground"
-msgstr ""
+msgstr "Глибоке підземелля"
 
 #. [editor_times]: id=indoors
 #: data/core/editor/time-of-day.cfg:51
 msgid "Indoors"
-msgstr ""
+msgstr "В приміщенні"
 
 #. [editor_times]: id=24
 #: data/core/editor/time-of-day.cfg:57
 msgid "24 Hour Schedule"
-msgstr ""
+msgstr "24-годинний час"
 
 #. [editor_times]: id=after_the_fall
 #: data/core/editor/time-of-day.cfg:63
 msgid "After the Fall"
-msgstr ""
+msgstr "Після Падіння"
 
 #. [theme]: id=editor
 #: data/themes/editor.cfg:11
-#, fuzzy
-#| msgid "Quit Editor"
 msgid "theme^Editor"
-msgstr "Вийти з редактора"
+msgstr "Редактор"
 
 #. [menu]: id=menu-editor-file, type=turbo
 #: data/themes/editor.cfg:61
@@ -188,7 +184,7 @@ msgstr "Файл"
 #. [menu]: id=menu-editor-recent
 #: data/themes/editor.cfg:72
 msgid "Load Recent"
-msgstr ""
+msgstr "Завантажити недавні"
 
 #. [menu]: id=menu-editor-map
 #: data/themes/editor.cfg:90
@@ -198,12 +194,12 @@ msgstr "Карта"
 #. [menu]: id=menu-unit-facing
 #: data/themes/editor.cfg:98
 msgid "Unit Facing"
-msgstr ""
+msgstr "Напрямок бійця"
 
 #. [menu]: id=menu-editor-transitions
 #: data/themes/editor.cfg:104
 msgid "Transition Update"
-msgstr ""
+msgstr "Оновити переходи"
 
 #. [menu]: id=menu-editor-window
 #: data/themes/editor.cfg:111
@@ -213,17 +209,17 @@ msgstr "Вікно"
 #. [menu]: id=menu-editor-areas
 #: data/themes/editor.cfg:120
 msgid "Areas"
-msgstr ""
+msgstr "Області"
 
 #. [menu]: id=menu-editor-local-time
 #: data/themes/editor.cfg:128
 msgid "Assign Local Time"
-msgstr ""
+msgstr "Призначити місцевий час"
 
 #. [menu]: id=menu-editor-local-schedule
 #: data/themes/editor.cfg:134
 msgid "Assign Local Time Schedule"
-msgstr ""
+msgstr "Призначити розклад місцевого часу"
 
 #. [menu]: id=menu-editor-side
 #: data/themes/editor.cfg:142
@@ -238,46 +234,46 @@ msgstr "села"
 #. [label]: id=units-icon
 #: data/themes/editor.cfg:175
 msgid "units"
-msgstr ""
+msgstr "бійці"
 
 #. [menu]: id=switch_time
 #: data/themes/editor.cfg:454
 msgid "Time Schedule Menu"
-msgstr ""
+msgstr "Меню часу доби"
 
 #. [menu]: id=menu-playlist
 #: data/themes/editor.cfg:465
 msgid "Playlist"
-msgstr ""
+msgstr "Список музики"
 
 #. [menu]: id=menu-editor-schedule
 #: data/themes/editor.cfg:471
 msgid "Assign Time Schedule"
-msgstr ""
+msgstr "Призначити розклад часу доби"
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:54
 msgid "Identifier: "
-msgstr ""
+msgstr "Індефікатор: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:55
 msgid "Name: "
-msgstr ""
+msgstr "Ім'я: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:56
 msgid "Type: "
-msgstr ""
+msgstr "Тип: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:57
 msgid "Level: "
-msgstr ""
+msgstr "Рівень: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:58
 msgid "Cost: "
-msgstr ""
+msgstr "Вартість: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:59
 msgid "Recruit: "
-msgstr ""
+msgstr "Вербувати: "
 
 #: src/editor/controller/editor_controller.cpp:176
 msgid "Fatal error"
@@ -288,10 +284,6 @@ msgid "Do you really want to quit?"
 msgstr "Ви точно хочете вийти?"
 
 #: src/editor/controller/editor_controller.cpp:208
-#, fuzzy
-#| msgid ""
-#| "Do you really want to quit? Changes in the map since the last save will "
-#| "be lost."
 msgid ""
 "Do you really want to quit? Changes to this map since the last save will be "
 "lost."
@@ -313,55 +305,47 @@ msgstr "Редактора часу доби не знайдено."
 
 #: src/editor/controller/editor_controller.cpp:1137
 msgid "Change Unit ID"
-msgstr ""
+msgstr "Змінити ID бійця"
 
 #: src/editor/controller/editor_controller.cpp:1138
 msgid "ID:"
-msgstr ""
+msgstr "ID:"
 
 #: src/editor/controller/editor_controller.cpp:1154
 msgid "Rename Unit"
-msgstr ""
+msgstr "Перейменувати бійця"
 
 #: src/editor/controller/editor_controller.cpp:1155
 msgid "Name:"
-msgstr ""
+msgstr "Назва:"
 
 #: src/editor/map/context_manager.cpp:189
 msgid "Load Map"
-msgstr ""
+msgstr "Завантажити карту"
 
 #: src/editor/map/context_manager.cpp:257 src/editor/map/map_context.cpp:831
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Map"
-msgstr "(Нова Карта)"
+msgstr "Нова карта"
 
 #: src/editor/map/context_manager.cpp:270 src/editor/map/map_context.cpp:831
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Scenario"
-msgstr "(Нова Карта)"
+msgstr "Новий сценарій"
 
 #: src/editor/map/context_manager.cpp:326
 msgid "No Recent Files"
-msgstr ""
+msgstr "Немає недавніх файлів"
 
 #: src/editor/map/context_manager.cpp:364
-#, fuzzy
-#| msgid "(New Map)"
 msgid "Unnamed Area"
-msgstr "(Нова Карта)"
+msgstr "Неназвана область"
 
 #: src/editor/map/context_manager.cpp:395
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Side"
-msgstr "(Нова Карта)"
+msgstr "Нова сторона"
 
 #: src/editor/map/context_manager.cpp:451
 msgid "Apply Mask"
-msgstr ""
+msgstr "Застосувати маску"
 
 #: src/editor/map/context_manager.cpp:460
 msgid "Error loading mask"
@@ -369,11 +353,11 @@ msgstr "Помилка при завантаженні маски"
 
 #: src/editor/map/context_manager.cpp:480
 msgid "Identifier:"
-msgstr ""
+msgstr "Індефікатор:"
 
 #: src/editor/map/context_manager.cpp:480
 msgid "Rename Area"
-msgstr ""
+msgstr "Переіменувати область"
 
 #: src/editor/map/context_manager.cpp:494
 msgid "Choose Target Map"
@@ -385,16 +369,12 @@ msgid "Error loading map"
 msgstr "Помилка при завантаженні карти"
 
 #: src/editor/map/context_manager.cpp:621
-#, fuzzy
-#| msgid "Save the Map As"
 msgid "Save Map As"
 msgstr "Зберегти карту як"
 
 #: src/editor/map/context_manager.cpp:642
-#, fuzzy
-#| msgid "Save the Map As"
 msgid "Save Scenario As"
-msgstr "Зберегти карту як"
+msgstr "Зберегти сценарій як"
 
 #: src/editor/map/context_manager.cpp:674
 msgid "No random map generators found."
@@ -410,20 +390,14 @@ msgid "Unsaved Changes"
 msgstr "Незбережені зміни"
 
 #: src/editor/map/context_manager.cpp:709
-#, fuzzy
-#| msgid ""
-#| "Do you want to discard all changes you made to the map since the last "
-#| "save?"
 msgid "Do you want to discard all changes made to the map since the last save?"
 msgstr ""
 "Ви дійсно хочете відкинути всі зміни, які внесли від часу останнього "
 "збереження карти?"
 
 #: src/editor/map/context_manager.cpp:765
-#, fuzzy
-#| msgid "This map is already open."
 msgid "This scenario is already open."
-msgstr "Ця карта вже відкрита."
+msgstr "Цей сценарій вже відкритий."
 
 #: src/editor/map/context_manager.cpp:788
 #: src/editor/map/context_manager.cpp:851
@@ -431,10 +405,8 @@ msgid "This map is already open."
 msgstr "Ця карта вже відкрита."
 
 #: src/editor/map/context_manager.cpp:812
-#, fuzzy
-#| msgid "Map saved."
 msgid "Scenario saved."
-msgstr "Карту збережено."
+msgstr "Сценарій збережено."
 
 #: src/editor/map/context_manager.cpp:827
 msgid "Map saved."
@@ -459,10 +431,8 @@ msgstr ""
 
 #: src/editor/map/editor_map.cpp:148
 #: src/editor/palette/location_palette.cpp:111
-#, fuzzy
-#| msgid "Player $player_number"
 msgid "Player $side_num"
-msgstr "Гравець $player_number"
+msgstr "Гравець $side_num"
 
 #: src/editor/map/editor_map.cpp:283
 msgid "The size of the target map is different from the current map"
@@ -473,10 +443,8 @@ msgid "File not found"
 msgstr "Файл не знайдено"
 
 #: src/editor/map/map_context.cpp:152
-#, fuzzy
-#| msgid "Empty map file"
 msgid "Empty file"
-msgstr "Файл карти порожній"
+msgstr "Порожній файл"
 
 #: src/editor/map/map_context.cpp:208
 msgid ""
@@ -487,10 +455,8 @@ msgstr ""
 "файл"
 
 #: src/editor/map/map_context.cpp:600
-#, fuzzy
-#| msgid "Could not save the map: $msg"
 msgid "Could not save the scenario: $msg"
-msgstr "Неможливо зберегти карту: $msg"
+msgstr "Неможливо зберегти сценарій: $msg"
 
 #: src/editor/map/map_context.cpp:632
 msgid "Could not save into scenario"
@@ -514,19 +480,19 @@ msgstr "Просто так в грі не буде працювати."
 
 #: src/editor/palette/location_palette.cpp:230
 msgid "Go To"
-msgstr ""
+msgstr "Йти до"
 
 #: src/editor/palette/location_palette.cpp:237
 msgid "Add"
-msgstr ""
+msgstr "Додати"
 
 #: src/editor/palette/location_palette.cpp:239
 msgid "New Location Identifier"
-msgstr ""
+msgstr "Новий ідентифікатор місцевості"
 
 #: src/editor/palette/location_palette.cpp:243
 msgid "Delete"
-msgstr ""
+msgstr "Видалити"
 
 #: src/editor/palette/terrain_palettes.cpp:231
 msgid "FG: "
@@ -537,16 +503,17 @@ msgid "BG: "
 msgstr "Тло:"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:137
+#, fuzzy
 msgid "Clipboard support not found, contact your packager"
-msgstr ""
+msgstr "Підтримка буферу обміну не знайдено, зв'яжіться з вашим packager"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:201
 msgid "Choose File"
-msgstr ""
+msgstr "Виберіть файл"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:202
 msgid "Select"
-msgstr ""
+msgstr "Вибрати"
 
 #: src/gui/dialogs/editor/set_starting_position.cpp:88
 msgid "player^None"
@@ -555,6 +522,15 @@ msgstr "Нема"
 #: src/gui/dialogs/editor/set_starting_position.cpp:101
 msgid "Player $player_number"
 msgstr "Гравець $player_number"
+
+#~ msgid "time of day^None"
+#~ msgstr "Немає"
+
+#~ msgid "Error"
+#~ msgstr "Помилка"
+
+#~ msgid "Invalid location id"
+#~ msgstr "Невірний id місцевості"
 
 #~ msgid "(New Map)"
 #~ msgstr "(Нова Карта)"
