--- a/po/wesnoth-help/uk.po
+++ b/po/wesnoth-help/uk.po
@@ -10,16 +10,16 @@ msgstr ""
 "Project-Id-Version: 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2012-10-31 12:38+0200\n"
-"Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2018-10-28 22:11+0200\n"
+"Last-Translator: AncientGeneral <greatgeneral12@gmail.com>\n"
+"Language-Team: \n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. [time]: id=underground
 #: data/campaigns/Heir_To_The_Throne/utils/httt_utils.cfg:495
@@ -138,12 +138,12 @@ msgstr ""
 #. [section]: id=editor
 #: data/core/editor/help.cfg:5
 msgid "Map and Scenario Editor"
-msgstr ""
+msgstr "Редактор карт та сценаріїв"
 
 #. [topic]: id=editor_brush
 #: data/core/editor/help.cfg:13
 msgid "Editor Brush"
-msgstr ""
+msgstr "Пензлі редактора"
 
 #. [topic]: id=editor_brush
 #. [topic]: id=editor_clipboard
@@ -168,7 +168,7 @@ msgstr ""
 #. [topic]: id=editor_tool_paint
 #: data/core/editor/help.cfg:29
 msgid "Paint Tool"
-msgstr ""
+msgstr "Інструмент малювання"
 
 #. [topic]: id=editor_tool_paint
 #: data/core/editor/help.cfg:30
@@ -181,7 +181,7 @@ msgstr ""
 #. [topic]: id=editor_tool_fill
 #: data/core/editor/help.cfg:39
 msgid "Fill Tool"
-msgstr ""
+msgstr "Інструмент заповнення"
 
 #. [topic]: id=editor_tool_fill
 #: data/core/editor/help.cfg:40
@@ -194,7 +194,7 @@ msgstr ""
 #. [topic]: id=editor_tool_select
 #: data/core/editor/help.cfg:49
 msgid "Select Tool"
-msgstr ""
+msgstr "Інструмент вибору"
 
 #. [topic]: id=editor_tool_select
 #: data/core/editor/help.cfg:50
@@ -207,7 +207,7 @@ msgstr ""
 #. [topic]: id=editor_tool_paste
 #: data/core/editor/help.cfg:59
 msgid "Paste Tool"
-msgstr ""
+msgstr "Інструмент вставки"
 
 #. [topic]: id=editor_tool_paste
 #: data/core/editor/help.cfg:60
@@ -217,7 +217,7 @@ msgstr ""
 #. [topic]: id=editor_tool_starting
 #: data/core/editor/help.cfg:67
 msgid "Starting Tool"
-msgstr ""
+msgstr "Інструмент Початкова позиція"
 
 #. [topic]: id=editor_tool_starting
 #: data/core/editor/help.cfg:68
@@ -231,12 +231,12 @@ msgstr ""
 #. [topic]: id=editor_tool_label
 #: data/core/editor/help.cfg:77
 msgid "Label Tool"
-msgstr ""
+msgstr "Інструмент Мітка"
 
 #. [topic]: id=editor_tool_item
 #: data/core/editor/help.cfg:85
 msgid "Item Tool"
-msgstr ""
+msgstr "Інструмент Предмет"
 
 #. [topic]: id=editor_tool_soundsource
 #: data/core/editor/help.cfg:93
@@ -254,17 +254,17 @@ msgstr ""
 #. [topic]: id=editor_tool_village
 #: data/core/editor/help.cfg:103
 msgid "Village Ownership Tool"
-msgstr ""
+msgstr "Інструмент Власник села"
 
 #. [topic]: id=editor_tool_unit
 #: data/core/editor/help.cfg:111
 msgid "Unit Tool"
-msgstr ""
+msgstr "Інструмент Боєць"
 
 #. [topic]: id=editor_named_area
 #: data/core/editor/help.cfg:119
 msgid "Named Areas"
-msgstr ""
+msgstr "Іменовані області"
 
 #. [topic]: id=editor_named_area
 #: data/core/editor/help.cfg:120
@@ -281,7 +281,7 @@ msgstr ""
 #. [topic]: id=editor_playlist
 #: data/core/editor/help.cfg:130
 msgid "Playlist Manager"
-msgstr ""
+msgstr "Менеджер списоку музики"
 
 #. [topic]: id=editor_playlist
 #: data/core/editor/help.cfg:131
@@ -451,7 +451,7 @@ msgstr ""
 #| msgid ""
 #| "\n"
 #| "\n"
-#| "<header>text='Creator Resources'</header>"
+#| "<header>text='Scenario Mode'</header>"
 msgid ""
 "\n"
 "\n"
@@ -459,7 +459,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"<header>text='Ресурси творця'</header>"
+"<header>text='Режим Сценарій'</header>"
 
 #. [topic]: id=editor_modes
 #: data/core/editor/help.cfg:200
@@ -477,7 +477,7 @@ msgstr ""
 #. [topic]: id=editor_toolkit
 #: data/core/editor/help.cfg:211
 msgid "Editor Tools"
-msgstr ""
+msgstr "Інструменти редактора"
 
 #. [topic]: id=editor_toolkit
 #: data/core/editor/help.cfg:212
@@ -503,10 +503,8 @@ msgstr ""
 
 #. [topic]: id=editor_terrain
 #: data/core/editor/help.cfg:234
-#, fuzzy
-#| msgid "Terrain Modifiers"
 msgid "Terrain Editor"
-msgstr "Модифікатори місцевості"
+msgstr "Редактор місцевості"
 
 #. [topic]: id=editor_terrain
 #: data/core/editor/help.cfg:235
@@ -531,12 +529,12 @@ msgstr ""
 #. [topic]: id=editor_time_schedule
 #: data/core/editor/help.cfg:250
 msgid "Time Schedule Editor"
-msgstr ""
+msgstr "Редактор часу доби"
 
 #. [topic]: id=editor_palette
 #: data/core/editor/help.cfg:258
 msgid "Editor Palette"
-msgstr ""
+msgstr "Палітра редактора"
 
 #. [topic]: id=editor_palette
 #: data/core/editor/help.cfg:259
@@ -616,12 +614,6 @@ msgstr "Великий океан"
 
 #. [topic]: id=great_ocean
 #: data/core/encyclopedia/geography.cfg:33
-#, fuzzy
-#| msgid ""
-#| "Lies to the west of the <ref>dst='great_continent' text='continent'</ref> "
-#| "and all rivers eventually flow to it. Far to the west in the the Great "
-#| "Ocean is a huge archipelago called <ref>dst='morogor' text='Morogor'</"
-#| "ref>."
 msgid ""
 "Lies to the west of the <ref>dst='great_continent' text='continent'</ref> "
 "and all rivers eventually flow to it. Far to the west in the Great Ocean is "
@@ -638,13 +630,6 @@ msgstr "Морогор"
 
 #. [topic]: id=morogor
 #: data/core/encyclopedia/geography.cfg:39
-#, fuzzy
-#| msgid ""
-#| "Archipelago, located somewhere in the <ref>dst='great_ocean' text='Great "
-#| "Ocean'</ref> west of the <ref>dst='green_isle' text='Green Isle'</ref> "
-#| "and east of the <ref>dst=old_continent text='Old Continent'</ref>.\n"
-#| "It is mostly inhabited by <ref>dst='..race_drake' text='drakes'</ref>.\n"
-#| "The central island of the archipelago is also called ‘Morogor’."
 msgid ""
 "Archipelago, located somewhere in the <ref>dst='great_ocean' text='Great "
 "Ocean'</ref> east of the <ref>dst='green_isle' text='Green Isle'</ref> and "
@@ -654,7 +639,8 @@ msgid ""
 msgstr ""
 "Архипелаг, розташований десь в <ref>dst='great_ocean' text='Великому "
 "океані'</ref> на захід від <ref>dst='green_isle' text='Зеленого острову'</"
-"ref> і на схід від <ref>dst=old_continent text='Старого континенту'</ref>.\n"
+"ref> і на схід від <ref>dst=great_continent text='Великого континенту'</"
+"ref>.\n"
 "В основному заселений <ref>dst='..race_drake' text='дрейками'</ref>.\n"
 "Центральний острів архипелагу також називається \"Морогор\"."
 
@@ -1244,10 +1230,8 @@ msgstr ""
 
 #. [section]: id=schedule
 #: data/core/help.cfg:10
-#, fuzzy
-#| msgid "Time of Day"
 msgid "Time of Day Schedule"
-msgstr "Час Доби"
+msgstr "Розклад часу доби"
 
 #. [section]: id=introduction
 #. [topic]: id=..introduction
@@ -1289,7 +1273,7 @@ msgstr "Особливості зброї"
 #. [topic]: id=..eras_section
 #: data/core/help.cfg:62 data/core/help.cfg:128
 msgid "Eras"
-msgstr ""
+msgstr "Ери"
 
 #. [section]: id=terrains_section
 #. [topic]: id=..terrains_section
@@ -2453,10 +2437,6 @@ msgstr ""
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:321
-#, fuzzy
-#| msgid ""
-#| " red if it can no longer move or attack, or the user ended the unit’s "
-#| "turn."
 msgid ""
 " red if it can no longer move or attack, or the user ended the unit’s turn."
 msgstr ""
@@ -2470,8 +2450,6 @@ msgstr " синій, якщо боєць - ваш союзник, яким ви 
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:323
-#, fuzzy
-#| msgid " Enemy units have no orb on top of their energy bar."
 msgid " Enemy units have no orb on top of their energy bar."
 msgstr " Бійці противника не мають кулі над смужкою здоров'я."
 
@@ -2572,15 +2550,11 @@ msgstr "Друга варта"
 
 #. [topic]: id=time_of_day
 #: data/core/help.cfg:347
-#, fuzzy
-#| msgid ""
-#| "Keep in mind that some scenarios take place underground, where it is "
-#| "perpetually night!"
 msgid ""
 "Keep in mind that some scenarios take place underground, where it is "
 "perpetually night!\n"
 msgstr ""
-"Пам'ятайте, що деякі сценарії відбуваються в підземеллі, де завжди ніч!"
+"Пам'ятайте, що деякі сценарії відбуваються в підземеллі, де завжди ніч!\n"
 
 #. [topic]: id=time_of_day
 #: data/core/help.cfg:349
@@ -3239,19 +3213,11 @@ msgstr ""
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:487
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "\n"
-#| "<header>text='Multiplayer Eras and Factions'</header>"
 msgid ""
 "\n"
 "\n"
 "<big>Multiplayer Modifications</big>"
 msgstr ""
-"\n"
-"\n"
-"<header>text='Ери та Фракції Мультиплеєру'</header>"
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:489
@@ -3583,8 +3549,6 @@ msgstr ""
 
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:576
-#, fuzzy
-#| msgid "Multiplayer commands"
 msgid "Multiplayer Commands"
 msgstr "Команди мультиплеєру"
 
@@ -3730,8 +3694,6 @@ msgstr ""
 
 #. [topic]: id=debug_commands
 #: data/core/help.cfg:614
-#, fuzzy
-#| msgid "Debug mode commands"
 msgid "Debug Mode Commands"
 msgstr "Команди режиму налагодження"
 
@@ -3966,15 +3928,6 @@ msgstr "лідерство"
 
 #. [leadership]: id=leadership
 #: data/core/macros/abilities.cfg:108
-#, fuzzy
-#| msgid ""
-#| "This unit can lead our own units that are next to it, making them fight "
-#| "better.\n"
-#| "\n"
-#| "Adjacent own units of lower level will do more damage in battle. When a "
-#| "unit adjacent to, of a lower level than, and on the same side as a unit "
-#| "with Leadership engages in combat, its attacks do 25% more damage times "
-#| "the difference in their levels."
 msgid ""
 "This unit can lead your own units that are next to it, making them fight "
 "better.\n"
@@ -4202,11 +4155,6 @@ msgstr "чума"
 
 #. [plague]: id=plague({TYPE}), type={TYPE}
 #: data/core/macros/abilities.cfg:305
-#, fuzzy
-#| msgid ""
-#| "When a unit is killed by a Plague attack, that unit is replaced with a "
-#| "Walking Corpse on the same side as the unit with the Plague attack. This "
-#| "doesn’t work on Undead or units in villages."
 msgid ""
 "When a unit is killed by a Plague attack, that unit is replaced with a unit "
 "on the same side as the unit with the Plague attack. This doesn’t work on "
@@ -4320,11 +4268,6 @@ msgstr "отрута"
 
 #. [poison]: id=poison
 #: data/core/macros/abilities.cfg:415
-#, fuzzy
-#| msgid ""
-#| "This attack poisons living targets. Poisoned units lose 8 HP every turn "
-#| "until they are cured or are reduced to 1 HP. Poison can not, of itself, "
-#| "kill a unit."
 msgid ""
 "This attack poisons living targets. Poisoned units lose 8 HP every turn "
 "until they are cured or are reduced to 1 HP. Poison cannot, of itself, kill "
@@ -4477,17 +4420,13 @@ msgstr "Друга варта"
 
 #. [time]: id=morning1
 #: data/core/macros/schedules.cfg:520
-#, fuzzy
-#| msgid "Morning"
 msgid "First Morning"
-msgstr "Ранок"
+msgstr "Перший ранок"
 
 #. [time]: id=morning2
 #: data/core/macros/schedules.cfg:532
-#, fuzzy
-#| msgid "Morning"
 msgid "Second Morning"
-msgstr "Ранок"
+msgstr "Другий ранок"
 
 #. [time]: id=midday1
 #: data/core/macros/schedules.cfg:544
@@ -5386,7 +5325,7 @@ msgstr "Дрейк"
 #. [race]: id=drake
 #: data/core/units.cfg:59
 msgid "race+female^Drake"
-msgstr "Дрейка"
+msgstr "Дрейк"
 
 #. [race]: id=drake
 #: data/core/units.cfg:60
@@ -5595,7 +5534,7 @@ msgstr "Гном"
 #. [race]: id=dwarf
 #: data/core/units.cfg:95
 msgid "race+female^Dwarf"
-msgstr "Гнома"
+msgstr "Гном"
 
 #. [race]: id=dwarf
 #: data/core/units.cfg:96
@@ -6260,7 +6199,7 @@ msgstr "Огр"
 #. [race]: id=ogre
 #: data/core/units.cfg:288
 msgid "race+female^Ogre"
-msgstr "Огра"
+msgstr "Огр"
 
 #. [race]: id=ogre
 #: data/core/units.cfg:289
@@ -6269,22 +6208,6 @@ msgstr "Огри"
 
 #. [race]: id=ogre
 #: data/core/units.cfg:290
-#, fuzzy
-#| msgid ""
-#| "Ogres are a wild and uncivilized race who dwell mainly in the wilderness "
-#| "of the Great Continent. Physically, they resemble humans and orcs but are "
-#| "larger and stronger. Even their adolescents are more than a match for "
-#| "most men. Ogres are distrusted in many populated areas and usually either "
-#| "avoid them or are driven out by force. Instead, they lurk the mountainous "
-#| "areas on the edges of civilization, where hungry ogre bandits provide a "
-#| "constant threat to travelers and caravans. While ogres are not "
-#| "particularly intelligent or quick, their toughness and physical strength "
-#| "make them a valuable asset in the armies of other races. They are "
-#| "especially valued by more ruthless commanders who don't mind the ogres' "
-#| "brutality. Little is known about their biology or society, if they can "
-#| "truly be said to have one, but they are said to attack alongside wolves "
-#| "and other beasts. Whether this is a sign of cooperation, domestication, "
-#| "or simply mutual opportunism is not known."
 msgid ""
 "Ogres are a wild and uncivilized race who dwell mainly in the wilderness of "
 "the Great Continent. Physically, they resemble humans and orcs but are "
@@ -6301,7 +6224,7 @@ msgid ""
 "is a sign of cooperation, domestication, or simply mutual opportunism is not "
 "known."
 msgstr ""
-"Огри - дика, нецивілізована раса, що мешкає переважно нв диких землях "
+"Огри - дика, нецивілізована раса, що мешкає переважно на диких землях "
 "Великого Континенту. Зовні вони нагадують людей і орків, але вони більші та "
 "сильніші. Дорослий чоловік навряд чи зрівняється навіть з їх дітьми. В "
 "заселених місцях до огрів відносяться непривітно, і, як правило, вони "
@@ -6323,7 +6246,7 @@ msgstr "Орк"
 #. [race]: id=orc
 #: data/core/units.cfg:299
 msgid "race+female^Orc"
-msgstr "Орка"
+msgstr "Орк"
 
 #. [race]: id=orc
 #: data/core/units.cfg:300
@@ -6796,6 +6719,37 @@ msgstr "+1 максимум ЗД"
 #~ "<header>text='Fundamentals of Gameplay'</header>\n"
 #~ "\n"
 #~ msgstr "<header>text='Бійці цієї раси'</header>"
+
+#, fuzzy
+#~| msgid ""
+#~| "\n"
+#~| "\n"
+#~| "<header>text='Multiplayer Eras and Factions'</header>"
+#~ msgid ""
+#~ "\n"
+#~ "\n"
+#~ "<header>text='Modifications'</header>"
+#~ msgstr ""
+#~ "\n"
+#~ "\n"
+#~ "<header>text='Ери та Фракції Мультиплеєру'</header>"
+
+#, fuzzy
+#~| msgid ""
+#~| "\n"
+#~| "\n"
+#~| "<header>text='Creator Resources'</header>"
+#~ msgid ""
+#~ "\n"
+#~ "\n"
+#~ "<header>text='Cores'</header>"
+#~ msgstr ""
+#~ "\n"
+#~ "\n"
+#~ "<header>text='Ресурси творця'</header>"
+
+#~ msgid "race^Merfolk"
+#~ msgstr "Водяні"
 
 #~ msgid "Close"
 #~ msgstr "Закрити"
