updated Russian translation

--- a/po/wesnoth-lib/ru.po
+++ b/po/wesnoth-lib/ru.po
@@ -14,7 +14,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-lib.po\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
 "PO-Revision-Date: 2016-10-16 04:41+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
@@ -2358,7 +2358,7 @@ msgstr "Перейти"
 #. [button]: id=url_go
 #: data/gui/window/addon_manager.cfg:648
 msgid "Visit this URL with a web browser"
-msgstr "Открыт этот URL в веб-браузере"
+msgstr "Открыть этот URL в веб-браузере"
 
 #. [text_box]: id=filter
 #: data/gui/window/addon_manager.cfg:694
@@ -6474,7 +6474,7 @@ msgstr "Наблюдение запрещено"
 #: src/gui/dialogs/multiplayer/lobby.cpp:957
 msgid ""
 "Something is wrong with the addon version check database supporting the "
-"multiplayer lobby. Please report this at http://bugs.wesnoth.org."
+"multiplayer lobby. Please report this at https://bugs.wesnoth.org."
 msgstr ""
 
 #: src/gui/dialogs/multiplayer/mp_alerts_options.cpp:131
