--- a/po/wesnoth-tb/ru.po
+++ b/po/wesnoth-tb/ru.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ru-tb\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
 "PO-Revision-Date: 2012-04-07 02:43+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
