--- a/po/wesnoth-tsg/ru.po
+++ b/po/wesnoth-tsg/ru.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-tsg.po\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2016-05-03 18:28+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
@@ -1429,7 +1429,10 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:358
-msgid "I shall not join these accursed undead! Bury me deeply, my friends..."
+#, fuzzy
+#| msgid ""
+#| "I shall not join these accursed undead! Bury me deeply, my friends..."
+msgid "I shall not join these accursed undead! Bury me deeply my friends..."
 msgstr ""
 "Я не хочу присоединяться к этим проклятым мертвецам! Похороните меня "
 "поглубже, друзья..."
