--- a/po/wesnoth/ru.po
+++ b/po/wesnoth/ru.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth.po\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:27+0300\n"
 "PO-Revision-Date: 2014-11-27 12:07+0300\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
@@ -4903,7 +4903,7 @@ msgstr ""
 "такие территории, которые вынудят вашего противника занять такую же "
 "невыгодную позицию. Избегайте мест, где защита ваших бойцов низкая, а бойцов "
 "противника — средняя или выше. Учтите, что Вы будете нести тяжёлые потери, и "
-"занимайте все выгодняе для Вас поля."
+"занимайте все выгодные для Вас поля."
 
 #. [tip]
 #: data/tips.cfg:253
