--- a/po/wesnoth-anl/ru.po
+++ b/po/wesnoth-anl/ru.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth.po\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
 "PO-Revision-Date: 2012-04-07 04:15+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
