--- a/po/wesnoth-did/ru.po
+++ b/po/wesnoth-did/ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:39 UTC\n"
 "PO-Revision-Date: 2014-11-11 12:10+0300\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
