--- a/po/wesnoth-ei/ru.po
+++ b/po/wesnoth-ei/ru.po
@@ -16,7 +16,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-ei.po\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
 "PO-Revision-Date: 2016-05-03 15:54+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
