--- a/po/wesnoth-help/ru.po
+++ b/po/wesnoth-help/ru.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth.po\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
 "PO-Revision-Date: 2016-10-16 04:35+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
