--- a/po/wesnoth-l/ru.po
+++ b/po/wesnoth-l/ru.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
 "PO-Revision-Date: 2016-05-03 17:07+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
@@ -843,10 +843,15 @@ msgstr ""
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:265
+#, fuzzy
+#| msgid ""
+#| "We have tarried here for far too long... There is no way we can reach "
+#| "Elensefar and return with help before the Wesnoth army destroys our "
+#| "homes. Retreat!"
 msgid ""
 "We have tarried here for far too long... There is no way we can reach "
 "Elensefar and return with help before the Wesnoth army destroys our homes. "
-"Retreat!"
+"Retreat!!"
 msgstr ""
 "Мы задержались здесь слишком долго... Нет надежды, что мы сможем достичь "
 "Эленсефара и вернуться с помощью до того, как армия Веснота разрушит наши "
