--- a/po/wesnoth-low/ru.po
+++ b/po/wesnoth-low/ru.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
 "PO-Revision-Date: 2016-05-03 14:38+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
