--- a/po/wesnoth-trow/ru.po
+++ b/po/wesnoth-trow/ru.po
@@ -16,7 +16,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ru-trow\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
 "PO-Revision-Date: 2016-05-03 16:34+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
