--- a/po/wesnoth-units/ru.po
+++ b/po/wesnoth-units/ru.po
@@ -12,7 +12,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth.po\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:27 UTC\n"
 "PO-Revision-Date: 2016-10-16 05:23+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
