--- a/po/wesnoth-utbs/ru.po
+++ b/po/wesnoth-utbs/ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2016-05-03 17:36+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
