Manpages: correct documentation
Guess who did run into this

--- a/doc/man/sv/wesnothd.6
+++ b/doc/man/sv/wesnothd.6
@@ -48,7 +48,7 @@ knyter servern till den specificerade porten. Om ingen port anges s\[oa]
 anv\[:a]nds port 15000. 
 
 .TP
-.BR -t , \ --thread
+.BR -t , \ --threads
 anger antalet tr\[oa]dar f\[:o]r n\[:a]tverkstrafik (standardv\[:a]rde: 5)
 
 .TP
