German Translation: fixing mistakes [ci skip]

--- a/po/wesnoth-ei/de.po
+++ b/po/wesnoth-ei/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-09 08:38 UTC\n"
-"PO-Revision-Date: 2018-06-04 01:55+0200\n"
+"PO-Revision-Date: 2019-01-06 17:53+0100\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.7\n"
+"X-Generator: Poedit 2.2\n"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:13
@@ -613,7 +613,7 @@ msgstr "Wer wandelt auf unseren Wegen?"
 msgid ""
 "We are soldiers of the king of Wesnoth. Will you help us fight these trolls?"
 msgstr ""
-"Wir sind Soldaten der Krone von Wesnoth. Hilfst du uns, mit den Trollen hier "
+"Wir sind Soldaten der Krone von Wesnoth. Helft ihr uns, mit den Trollen hier "
 "unten fertig zu werden?"
 
 #. [message]: speaker=unit
@@ -4277,11 +4277,9 @@ msgid ""
 "to all in its path."
 msgstr ""
 "Es mag sein, dass Sterben nicht das Schlimmste war für Gweddry und seine "
-"wagemutige Schar.\n"
-"Dass sie nicht lange genug lebten, den Anblick einer entsetzlichen Armee "
-"Untoter zu ertragen,\n"
-"die sich einer Flutwelle gleich gen Wesnoth ergoß und nichts als Chaos "
-"hinterließ."
+"wagemutige Schar. Dass sie nicht lange genug lebten, den Anblick einer "
+"entsetzlichen Armee Untoter zu ertragen, die sich einer Flutwelle gleich gen "
+"Wesnoth ergoß und nichts als Chaos hinterließ."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Eastern_Invasion/utils/deaths.cfg:104
