--- a/po/wesnoth-trow/de.po
+++ b/po/wesnoth-trow/de.po
@@ -4113,7 +4113,7 @@ msgstr ""
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/13_Peoples_in_Decline.cfg:217
 msgid "We come in peace. We only seek to re-provision our ships."
 msgstr ""
-"Wir kommen in Frieden. Wir möchten nur unser Schiffe mit neuem Proviant "
+"Wir kommen in Frieden. Wir möchten nur unsere Schiffe mit neuem Proviant "
 "ausstatten."
 
 #. [message]: speaker=Lady Jessene
